# wasmwasm

./: .gitignore  README  README.md  build.ps1  build.sh  build_wasm.bash  build_wasm.sh  index.html  math.wasm
assets/: codemirror-3QUsdvC8.js  codemirror-BehxPV9w.js  codemirror-CJ9ACxVv.js  codemirror-CLoqrKN6.js  codemirror-CNdeAr8f.js  codemirror-CmH-fIHo.js  codemirror-CnvS0SNc.js  codemirror-CpSzK4dp.js  codemirror-DlnF_jSH.js  codemirror-DtFGSL1z.js  codemirror-Fjq8KlIP.js  index-5zOFpkbS.js  index-6UQhWhdB.js  index-B-G6AFva.js  index-B1B8hMCo.js  index-B1y7ecIm.css  index-B2San6zZ.js  index-B3Gq3dYF.css  index-B5-oYYAh.js  index-B57gPuXk.js  index-B5z8zIYq.css  index-B6yHCrTO.js  index-B7G7gFrl.css  index-B9sxJ4_i.js  index-BA5VE38x.js  index-BBGIoAuS.js  index-BBIg4tg8.js  index-BCLqJorg.js  index-BEPKAvj8.js  index-BFLpFzP8.js  index-BFhDbYSi.js  index-BFpTVcGQ.js  index-BGaY5sOe.js  index-BIk-NIly.js  index-BKUpD5Fs.js  index-BKyZdxBY.js  index-BMvqO0C9.css  index-BNT0hzwW.js  index-BNrk-Y_m.js  index-BNuef62v.js  (+239 more)
compiler/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  bah
compiler/app/: CMakeLists.txt  bindings.cpp  main.cpp
compiler/cmake/: compiler-flags.cmake
compiler/debugger/: CMakeLists.txt  index.html  main.cpp  math.wasm  output.wasm  run.ps1  run.sh
compiler/functions/: sin.cpp
compiler/math/: CMakeLists.txt  basic.cpp  sin.cpp
compiler/src/: CMakeLists.txt  ast.hpp  builtins.cpp  builtins.hpp  code_gen.cpp  code_gen.hpp  compile.cpp  compile.hpp  parser.cpp  parser.hpp  tokenizer.cpp  tokenizer.hpp
compiler/src/ast/: ast.cpp  ast.hpp
compiler/src/backend/: backend.hpp
compiler/src/backend/binaryen/: binaryen_backend.cpp  binaryen_backend.hpp  binaryen_codegen.cpp  binaryen_codegen.hpp  binaryen_emit.cpp  binaryen_math_module.cpp
compiler/src/code_gen/: closure_builder.cpp  closure_builder.hpp  code_gen.cpp  code_gen.hpp  code_gen_context.cpp  code_gen_context.hpp  expression_emitter.cpp  expression_emitter.hpp  free_var_analyzer.cpp  free_var_analyzer.hpp  init_buffers_builder.cpp  init_buffers_builder.hpp  main_module_builder.cpp  main_module_builder.hpp
compiler/src/ir/: emit.cpp  emit.hpp  emit_main_loop.cpp  ir.hpp  lower.cpp  lower.hpp  lower_arrays.cpp  lower_bind.cpp  lower_call.cpp  lower_closures.cpp  lower_expr.cpp  lower_internal.hpp
compiler/src/lsp/: lsp.cpp  lsp.hpp
compiler/src/parser/: parser.cpp  parser.hpp  tokenizer.cpp  tokenizer.hpp
compiler/src/routing/: routing.cpp  routing.hpp
compiler/src/types/: type.cpp  type.hpp  type_inference.cpp  type_inference.hpp
conductor_compiler/: .clang-tidy  CMakeLists.txt
conductor_compiler/src/: CMakeLists.txt  compile.cpp  compile.hpp
docs/: conductor.md  language.md  score-language.md  score-tutorial.md  tutorial.md
examples/: Chua  KS  Simple Leapfrog
frontend/: .gitignore  .prettierignore  .prettierrc  benchmark.html  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.worklet.json  tsconfig.worklet.tsbuildinfo  vite.config.ts
frontend/examples/: chuas_circuit.txt  double_pendulum.txt  harmonic_oscillator.txt  karplus_strong.txt
frontend/src/: App.tsx  main.tsx  scorewasm  wasmwasm.d.ts
patch_compiler/: .clang-format  .clang-tidy  .clangd  CMakeLists.txt
patch_compiler/app/: CMakeLists.txt  bindings.cpp
patch_compiler/cmake/: compiler-flags.cmake
patch_compiler/debugger/: CMakeLists.txt  run.ps1  run.sh
patch_compiler/math/: CMakeLists.txt  basic.cpp
patch_compiler/src/: CMakeLists.txt  builtins.cpp  builtins.hpp  compile.cpp  compile.hpp
patch_compiler/src/ast/: ast.hpp
patch_compiler/src/backend/: backend.hpp
patch_compiler/src/backend/binaryen/: binaryen_codegen.cpp  binaryen_codegen.hpp  binaryen_emit.cpp  binaryen_emit.hpp  binaryen_emit_instances.cpp  binaryen_emit_main_loop.cpp  binaryen_math_module.hpp  binaryen_simd_vectorize_pass.cpp  binaryen_simd_vectorize_pass.hpp  instance_layout.cpp  instance_layout.hpp
patch_compiler/src/ir/: ir.hpp  lower.cpp  lower_arrays.cpp  lower_bind.cpp  lower_call.cpp  lower_closures.cpp  lower_expr.cpp  lower_internal.hpp  lower_unroll.cpp
patch_compiler/src/lsp/: lsp.cpp
patch_compiler/src/parser/: parser.cpp
patch_compiler/src/routing/: routing.cpp  routing.hpp
patch_compiler/src/types/: type_inference.cpp  type_inference.hpp
patch_compiler/tests/: CMakeLists.txt  run_case.js  runner.cpp
patch_compiler/tests/cases/: buffer.json  closure.ww  die.ww  dp_fixedpoint_unroll.expect  global_effect.json  input.expect  input.json  params.json  patch.expect  patch.json  pluck_test.json  sine_repro.expect  sine_repro.json  unroll_recursion.expect  unroll_recursion.ww
score_compiler/: CMakeLists.txt
score_compiler/app/: CMakeLists.txt  bindings.cpp
score_compiler/cmake/: compiler-flags.cmake
score_compiler/src/: CMakeLists.txt  compile.cpp  compile.hpp
score_compiler/src/ast/: ast.cpp  ast.hpp  binop_eval.cpp  binop_eval.hpp  rational.cpp  rational.hpp  simplify.cpp  simplify.hpp
score_compiler/src/backend/: codegen.cpp  codegen.hpp  json_writer.hpp
score_compiler/src/lsp/: lsp.cpp
score_compiler/src/parser/: parser.cpp  parser.hpp  tokenizer.cpp  tokenizer.hpp
score_compiler/src/resolve/: optimize.cpp  optimize.hpp  resolver.cpp  resolver.hpp
score_compiler/tests/: CMakeLists.txt  run_case.js  runner.cpp
score_compiler/tests/cases/: basic_sequence.expect  basic_sequence.score  cycle.expect  cycle.score  fork_join.expect  fork_join.score  instrument.expect  instrument.score  instrument_not_string.score  reuse_clone.expect  reuse_clone.score  undefined_var.score
scripts/: pre-commit.sh  pre-push.sh
wasmwasm/: .clang-tidy  .gitignore  CMakeLists.txt
wasmwasm/app/: main.cpp
wasmwasm/src/: ast.hpp  code_gen.cpp  code_gen.hpp  parser.cpp  parser.hpp  tokenizer.cpp  tokenizer.hpp
website/: .gitignore  package-lock.json  package.json  vite.config.ts
website/examples/: chuas_circuit.txt  double_pendulum.txt  harmonic_oscillator.txt  karplus_strong.txt
website/public/: functions.js  (+1 more)
(+166 files in other folders)
